fixed grid alignment based on media queries

--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,8 @@ nav, footer { /*-- common styles for nav and footer --*/
   justify-content: center;
   text-align: center;
 }
-nav { /*-- sets navbar height --*/
+nav, footer { /*-- sets navbar height --*/
   height: var(--height);
-}
-footer { /*-- ensures footer is always twice as tall as navbar --*/
-  height: calc(var(--height) * 2); /*-- calc() uses math operators --*/
 }
 h1 {
   margin-top: 1rem;
@@ -180,7 +177,7 @@ em {
 
 .grid-item {
   max-width: 220px;
-  width: 220px;
+  width: auto;
 }
 
 /* for expanding image */
@@ -212,27 +209,56 @@ em {
   cursor: pointer;
 }
 
+footer {
+  font-family: "Cal Sans", sans-serif;
+  float: center;
+  display: block;
+  color: #632f4b;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+  
+/* Change the color of links on hover */
+.footer a:hover {
+  background-color: #e8c0e2;
+  color: black;
+}
+  
+/* Add an active class to highlight the current page */
+.footer a.active {
+  background-color: #bcedff;
+}
+.footer {
+  background-color: #ffffff;
+  overflow: hidden;
+}
+
 /*-- children defaults --*/
 .grid-item {
   background-color: aliceblue;
   border: 2px solid royalblue;
   padding: 0.5rem;
   margin: 0.5rem;
+  justify-self: center;
 }
 /*-- Regular layout method, targets children --*/
 
 /*--------------
 - GRID LAYOUT  -
 ----------------*/
-.grid-4x3 {
+.grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); /* 3 equal-width columns */
-  grid-template-rows: repeat(3, auto);  /* 4 rows, height auto based on content */
+  /*grid-template-columns: repeat(4, 1fr); */
+  grid-template-rows: repeat(3, auto); 
   gap: auto;
-  padding: 16px;
+  padding: 0;
   max-width: 1000px;
   margin: 0 auto;
   box-sizing: border-box;
+  position: relative;
 }
 
 .grid-item {
@@ -240,33 +266,34 @@ em {
   padding: 20px;
   border: 1px solid #ccc;
   font-weight: bold;
+  position: relative;
 }
 /* -- media queries for grid-- */
 @media screen and (min-width: 550px) {
-  .grid-container {
+  .grid {
     grid-template-columns: repeat(2, 1fr);
+    max-width: 550px;
   }
 }
-@media screen and (min-width: 768px) {
-  .grid-container {
+@media screen and (min-width: 775px) {
+  .grid {
     grid-template-columns: repeat(3, 1fr);
+    max-width: 775px;
   }
 }
 @media screen and (min-width: 900px) {
-  .grid-container {
-    grid-template-columns: repeat(4, 1fr);
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 900px;
   }
 }
 @media screen and (min-width: 1280px) {
-  .grid-container {
+  .grid {
     grid-template-columns: repeat(4, 1fr);
+    max-width: 1280px;
   }
 }
-@media screen and (min-width: 1440px) {
-  .grid-container {
-    grid-template-columns: repeat(6, 1fr);
-  }
-}
+
 
 /*media queries for menu*/
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
@@ -275,6 +302,9 @@ em {
   .topnav a.icon {
     float: right;
     display: block;
+  }
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
